--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ovo&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMS4xk6RqeWeci5ZR/Lv4MR0sA0FfDOMS4xkV" crossorigin="anonymous">
+
   </head>
   <body
     class="overflow-x-hidden font-Outfit leading-8 dark:bg-darkTheme dark:text-white"
